video iframe z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,8 @@ html, body {
 	width:100%;
 	height:218px;
 	background:transparent;
+	position:absolute;
+	z-index:2;
 }
 .bandcamp iframe, .bandcamp {
 	height:120px;
@@ -566,6 +568,7 @@ html, body {
 	display:block;
 	position:absolute;
 	text-align:center;
+	z-index:1;
 }
 .ui-element.text {
   font-size:14px;
